all endpoints and docs are finsihed. seed.js, deploying, and test doc is all that is left
